crates/swc_ecma_parser/tests/test262-error-references/fail/fc8bfabd18ec26dc.js.stderr
error: Expected 4 hex characters
 --> $DIR/tests/test262-parser/fail/fc8bfabd18ec26dc.js:1:2
  |
1 | "\u0";
  |  ^^^

